# Pokemon-Python-Platinum

./: .gitignore  .platinum_settings.json  LICENSE  PokemonPlatinum.spec  README.md  conftest.py  debug_boy_items.py  debug_offmain.bat  download_pokemon_cries.py  enhanced_launcher.py  enhanced_setup.py  launcher.py  main.bat  main.py  play_game.bat  pyproject.toml  setup_requirements.py  sfxtoogg.py  simple_launcher.py  skeleton.sh  test_barry_flow.py  test_barry_music.py  test_growl_battle.py  test_growl_move.py  test_improvements.py  test_integration.py  test_route201_entry.py  test_route201_overworld.py  test_starter_fix.py  test_victory_music.py  test_wild_encounters.py  test_wild_victory.py  verify_architecture.py  verify_dependencies.py
assets/abilities/: blaze.json  (+123 more)
bundles/: asset_manifest.json
platinum/: DEPRECATED_NOTICE.md  __init__.py  __main__.py  cli.py  overworld.py
schema/: event.schema.json
scripts/: build_abilities.py  build_items.py  build_machines.py  build_moves.py  build_pokemon.py  check_assets.sh  check_layout.sh  debug_simulate.py  validate_dialogue.py  validate_moves.py
tests/: test_battle_basic.py  test_battle_capture_flee.py  test_battle_struggle.py  test_damage.py  test_data_loader.py  test_encounter_gating.py  test_encounters.py  test_events.py  test_experience_gain.py  test_game_start_event.py  test_move_learning.py  test_obedience.py  test_party_limits.py  test_progression_flags.py  test_recharge_moves.py  test_status_and_multiturn.py  test_type_formatting.py
tools/: asset_bundler.py  asset_extractor.py  audio_loop_processor.py
(+8137 files in other folders)
