[project]
name = "platinum-text"
version = "0.1.0"
description = "High-fidelity text-based reconstruction of Pokémon Platinum (Prima pacing)"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.21.0",
  "colorama>=0.4.6",
  "pygame>=2.5.0"
]

[project.optional-dependencies]
dev = ["mypy", "pytest", "rich"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"